# unified-search

./: .env.example  .gitignore  .gitlint  .pre-commit-config.yaml  .release-please-manifest.json  README.md  azure-pipelines-build-graphql-main.yml  azure-pipelines-build-graphql-release.yml  azure-pipelines-build-sources-main.yml  azure-pipelines-build-sources-release.yml  azure-pipelines-unified-search-graphql-release.yml  azure-pipelines-unified-search-graphql-review.yml  azure-pipelines-unified-search-graphql-test.yml  azure-pipelines-unified-search-sources-release.yml  azure-pipelines-unified-search-sources-review.yml  azure-pipelines-unified-search-sources-test.yml  commitlint.config.mjs  compose.yaml  docker-compose.yml  release-please-config.json
sources/: .dockerignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  README.md  docker-entrypoint.sh  manage.py  openapi.yaml  pyproject.toml  ready.txt  requirements-dev.in  requirements-dev.txt  requirements-prod.txt  requirements.in  requirements.txt  setup.cfg  sonar-project.properties
sources/.prod/: on_deploy.sh  uwsgi.ini
sources/common/: elasticsearch.py  elasticsearch_compatibility.py
sources/common/tests/: test_elasticsearch_compatibility.py
sources/custom_health_checks/: README.md  backends.py
sources/db_data/: README.md
sources/ingest/: README.md  apps.py  tests.py
sources/ingest/fetch/: bar.py  event.py  foo.py  keyword.py  language.py  linkedevents.py  location.py  ontology.py  palvelukartta.py  servicemap.py  shared.py  traffic.py  vapaaehtoistoiminta.py
sources/ingest/importers/: __init__.py  administrative_division.py  (+7 more)
sources/sources/: asgi.py  csp_settings.py  settings.py  urls.py  wsgi.py
sources/tests/: test_cors.py  test_csp.py  test_es_health.py  test_url_patterns.py
(+191 files in other folders)
